pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/14-ingress-with-forwardauth-signin.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-forwardauth-signin
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://whoami.default.svc/"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.example.com/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Foo"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /forwardauth
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
